--- a/package.json
+++ b/package.json
@@ -1,13 +1,33 @@
 {
   "name": "cotizador-final",
-  // ...
-  "homepage": "https://rogermontejo-alw.github.io/TVSA-Cotizador",  
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "homepage": "https://rogermontejo-alw.github.io/TVSA-Cotizador",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    // ... otros scripts
-    "predeploy": "npm run build",     
-    "deploy": "gh-pages -d dist"      
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
-  // ...
+  "dependencies": {
+    "lucide-react": "^0.553.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@vitejs/plugin-react": "^4.0.3",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.45.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "gh-pages": "^6.1.0",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.3.6",
+    "vite": "^4.4.5"
+  }
 }
