--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,13 @@
-/node_modules
-/dist
+node_modules
+dist
+.env
+.env.*
+.DS_Store
+*.local
+# IDE
+.vscode
+.idea
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
